# tinker9

./: notesbyhzc
ext/: amoeba_nn
include/ff/: enn.h  evalence.h  potent.h
src/: CMakeLists.txt  cmakesrc.txt  energy.cpp  enn.cpp  mod.cpp  xanalyze.cpp  xminimize.cpp
src/bonded/: ennval.cpp
